# obc-software

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists_BACKUP_53416.txt  CMakeLists_LOCAL_53416.txt  CMakeLists_template.txt  CMakeUserPresets.json  Harmony3_Configurator.sh  LICENSE  README.md  STM32L4S9ZITx_FLASH.ld  arm  atmel_samv71_xplained_ultra.cfg  conan-arm-clang-profile  conan-arm-profile  conanfile.py  conanfile.txt  obc-software.ioc  obc-software.xml  output.txt  receive.py  report.xml  send.py
.devcontainer/: Dockerfile
AutoGenerated.X/: AutoGenerated.mc3  mcc-manifest-autosave.yml
AutoGenerated.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
Inc/: ECSS_Configuration.hpp  main.h  obc.h  stm32l4xx_hal_conf.h
Src/: main.c  obc.cpp  stm32l4xx_hal_msp.c
Src/Platform/: ErrorHandler.cpp  Logger.cpp
Test6.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
ci/: cppcheck.sh
host/: listen.py  min.py
inc/: DummyECSS.hpp  FlashDriver.hpp  FreeRTOSConfig.h  OBC_Definitions.h
inc/EnvTestFiles/: DummyECSS.hpp
inc/FreeRTOSTasks/: AFEC0HandlingTask.hpp  AmbientTemperatureTask.hpp  CANGatekeeperTask.hpp  CANTestTask.hpp  CANTransmitTask.hpp  ExternalTemperatureTask.hpp  FlashTestTask.hpp  HeaterTask.hpp  HousekeepingTask.hpp  InitialisationTask.hpp  InitializationTask.hpp  InternalFlashTestTask.hpp  LittleFSTask.hpp  MCUTemperatureTask.hpp  NANDCheckIDTask.hpp  NANDEraseBlockTask.hpp  NANDInitializeTask.hpp  NANDTask.hpp  NANDWriteReadTask.hpp  OBTtoADCSTask.hpp  RM3100Task.hpp  ReportParametersTask.hpp  RequestParamADCSTask.hpp  StatisticsReportingTask.hpp  TCHandlingTask.hpp  Task.hpp  TaskList.hpp  TemperatureTask.hpp  TimeBasedSchedulingTask.hpp  TimeSyncTask.hpp  (+9 more)
src/: CMakeLists.txt  DummyECSS.cpp  FlashDriver.cpp  FreeRTOSConfig.h  InitializationTask.cpp  InitializationTask.hpp  app.c  atmel_samv71_xplained_ultra.cfg  main.c  main.cpp  min_atsamv71.c  overrides.c
src/EnvTestFiles/: DummyECSS.cpp
src/FreeRTOS/Source/: queue.c
src/FreeRTOS/Source/include/: FreeRTOS.h  queue.h
src/FreeRTOS/Source/portable/MemMang/: heap_5.c
src/FreeRTOSTasks/: AFEC0HandlingTask.cpp  AmbientTemperatureTask.cpp  CANGatekeeperTask.cpp  CANTestTask.cpp  CANTransmitTask.cpp  ExternalTemperatureTask.cpp  FlashTestTask.cpp  HeaterTask.cpp  HousekeepingTask.cpp  InitialisationTask.cpp  InitializationTask.cpp  InternalFlashTestTask.cpp  LittleFSTask.cpp  MCUTemperatureTask.cpp  NANDCheckIDTask.cpp  NANDEraseBlockTask.cpp  NANDInitializeTask.cpp  NANDTask.cpp  NANDWriteReadTask.cpp  OBTtoADCSTask.cpp  RM3100TASK.cpp  RM3100TATASK.cpp  RM3100Task.cpp  RequestParamADCSTask.cpp  StatisticsReportingTask.cpp  TCHandlingTask.cpp  TimeBasedSchedulingTask.cpp  TimeKeepingTask.cpp  TimeRequestUponResetTask.cpp  TimeSyncTask.cpp  UARTGatekeeper.cpp  UARTGatekeeperTask.cpp  UpdateParametersTask.cpp  WatchdogTask.cpp  heater.cpp
src/Platform/: CANApplication.cpp  CANApplicationLayer.cpp  CANBus.cpp  CANDriver.cpp  CANMessage.cpp  CANTPMessage.cpp  CANTPProtocol.cpp  ErrorHandler.cpp  FreeRTOSTasks.cpp  Logger.cpp  ParameterService.cpp  Service.cpp  TaskInitialization.cpp  TimeGetter.cpp  UARTRXTask.cpp  UARTTask.cpp
src/Platform/CAN/: ApplicationLayer.cpp  Driver.cpp  TPMessage.cpp  TPProtocol.cpp
src/Platform/FreeRTOSTasks/: HousekeepingTask.cpp  RM3100TATASK.cpp  ReportParametersTask.cpp  TemperatureTask.cpp  TestServiceTask.cpp  TimeKeepingTask.cpp  UARTRXTask.cpp  UartDMATask.cpp  UpdateParametersTask.cpp  XTimeKeepingTask.cpp  XUartDMATask.cpp
src/Platform/Parameters/: BootCounter.c  BootCounter.cpp
src/Platform/Services/: FunctionManagementService.cpp  HousekeepingService.cpp  ParameterService.cpp  ParameterStatisticsService.cpp  TimeBasedSchedulingService.cpp
src/config/default/: ATSAMV71Q21B.ld  InitializationTask.hpp  configuration.h  definitions.h  device_vectors.h  harmony-manifest-failure.yml  harmony-manifest-success.yml  initialization.c  interrupts.c  interrupts.h  libc_syscalls.c  pin_configurations.csv  startup_gcc.c  startup_xc32.c
src/config/default/default.mhc/: GraphSettings.yml  HarmonyCore.yml  afec0.yml  core.yml  dacc.yml  efc.yml  mcan0.yml  mcan1.yml  project.yml  pwm0.yml  pwm1.yml  rtc.yml  rtt.yml  settings.yml  smc.yml  spi0.yml  sys_time.yml  twihs2.yml  uart0.yml  uart4.yml  usart1.yml
src/config/default/peripheral/afec/: plib_afec0.c  plib_afec0.h  plib_afec_common.h
src/config/default/peripheral/clk/: plib_clk.c
src/config/default/peripheral/dacc/: plib_dacc.c
src/config/default/peripheral/mcan/: plib_mcan0.c  plib_mcan0.h  plib_mcan1.c  plib_mcan1.h  plib_mcan_common.h
src/config/default/peripheral/mpu/: plib_mpu.c
src/config/default/peripheral/nvic/: plib_nvic.c
src/config/default/peripheral/pio/: plib_pio.c  plib_pio.h
src/config/default/peripheral/pwm/: plib_pwm0.c  plib_pwm1.c  plib_pwm1.h
src/config/default/peripheral/rtc/: plib_rtc.c  plib_rtc.h
src/config/default/peripheral/rtt/: plib_rtt.c  plib_rtt.h
src/config/default/peripheral/smc/: plib_smc.c  plib_smc.h
src/config/default/peripheral/spi/spi_master/: plib_spi0_master.c  plib_spi0_master.h
src/config/default/peripheral/systick/: plib_systick.c  plib_systick.h
src/config/default/peripheral/twihs/master/: plib_twihs2_master.c  plib_twihs2_master.h
src/config/default/peripheral/uart/: plib_uart0.c  plib_uart0.h  plib_uart3.c  plib_uart3.h  plib_uart4.c  plib_uart4.h
src/config/default/peripheral/usart/: plib_usart1.c
src/config/default/peripheral/wdt/: plib_wdt.c  plib_wdt.h
src/config/default/peripheral/xdmac/: plib_xdmac.c
src/config/default/stdio/: gcc_monitor.c  xc32_monitor.c
src/config/default/system/time/src/: sys_time.c  sys_time_local.h
src/packs/ATSAMV71Q21B_DFP/component/: pwm.h  usart.h
tests/: flash_read.py  main_cpp.cpp  pyocd.yaml
(+102 files in other folders)
